--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,12 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
+  cached_network_image: ^3.2.3
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.3.6
   google_fonts: ^4.0.4
-  miniplayer: ^1.0.1
+  
   timeago: ^3.4.0
   video_player: ^2.6.1
   youtube_player_flutter: ^8.1.2
